# tm-grammars

./: .gitattributes  CHANGES.md  LICENSE  Makefile  README.md  README.mld  THIRD-PARTY-LICENSES  dune  dune-project  sources.json  tm-grammar-c.opam  tm-grammar-cpp.opam  tm-grammar-cram.opam  tm-grammar-css.opam  tm-grammar-diff.opam  tm-grammar-dockerfile.opam  tm-grammar-dune-project.opam  tm-grammar-dune-workspace.opam  tm-grammar-dune.opam  tm-grammar-go.opam  tm-grammar-graphql.opam  tm-grammar-html.opam  tm-grammar-java.opam  tm-grammar-javascript.opam  tm-grammar-json.opam  tm-grammar-jsonc.opam  tm-grammar-makefile.opam  tm-grammar-markdown.opam  tm-grammar-menhir.opam  tm-grammar-mlx.opam  tm-grammar-ocaml-interface.opam  tm-grammar-ocaml.opam  tm-grammar-ocamllex.opam  tm-grammar-opam.opam  tm-grammar-python.opam  tm-grammar-reason.opam  tm-grammar-ruby.opam  tm-grammar-rust.opam  tm-grammar-shellscript.opam  tm-grammar-sql.opam  (+7 more)
.github/workflows/: ci.yml
scripts/: gen_all_module.sh  gen_dune_project.sh  gen_package_dunes.sh  gen_pkg_module.sh  gen_readme_md.sh  gen_third_party_licenses.sh  generate.sh  sync.sh
tasks/: issue-ocaml-textmate-language.md
test/: dune  test_registry.ml
