(rule
 (alias gen)
 (deps sources.json scripts/gen_dune_project.sh)
 (target dune-project)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run bash scripts/gen_dune_project.sh sources.json))))

(rule
 (alias doc-markdown)
 (deps
   README.mld
   sources.json
   scripts/gen_readme_md.sh
   (glob_files packages/tm-grammar-*/dune))
 (target README.md)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run bash scripts/gen_readme_md.sh README.mld sources.json))))
