(lang dune 3.17)

(name tm-grammars)

(version 0.1.0)

(generate_opam_files true)

(source
 (github davesnx/tm-grammars))

(license MIT)

(package
 (name tm-grammar-c)
 (synopsis "TextMate grammar for c")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-cpp)
 (synopsis "TextMate grammar for cpp")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-cram)
 (synopsis "TextMate grammar for cram")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-css)
 (synopsis "TextMate grammar for css")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-diff)
 (synopsis "TextMate grammar for diff")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-dockerfile)
 (synopsis "TextMate grammar for dockerfile")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-dune)
 (synopsis "TextMate grammar for dune")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-go)
 (synopsis "TextMate grammar for go")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-graphql)
 (synopsis "TextMate grammar for graphql")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-html)
 (synopsis "TextMate grammar for html")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-java)
 (synopsis "TextMate grammar for java")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-javascript)
 (synopsis "TextMate grammar for javascript")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-json)
 (synopsis "TextMate grammar for json")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-jsonc)
 (synopsis "TextMate grammar for jsonc")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-makefile)
 (synopsis "TextMate grammar for makefile")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-markdown)
 (synopsis "TextMate grammar for markdown")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-menhir)
 (synopsis "TextMate grammar for menhir")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-mlx)
 (synopsis "TextMate grammar for mlx")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-ocaml)
 (synopsis "TextMate grammar for ocaml")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-ocamllex)
 (synopsis "TextMate grammar for ocamllex")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-opam)
 (synopsis "TextMate grammar for opam")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-python)
 (synopsis "TextMate grammar for python")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-reason)
 (synopsis "TextMate grammar for reason")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-ruby)
 (synopsis "TextMate grammar for ruby")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-rust)
 (synopsis "TextMate grammar for rust")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-shellscript)
 (synopsis "TextMate grammar for shellscript")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-sql)
 (synopsis "TextMate grammar for sql")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-toml)
 (synopsis "TextMate grammar for toml")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-tsx)
 (synopsis "TextMate grammar for tsx")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-typescript)
 (synopsis "TextMate grammar for typescript")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammar-yaml)
 (synopsis "TextMate grammar for yaml")
 (authors "David Sancho <dsnxmoreno@gmail.com>")
 (maintainers "David Sancho <dsnxmoreno@gmail.com>")
 (depends
  ocaml))

(package
 (name tm-grammars)
 (synopsis "All bundled TextMate grammars")
 (depends
  ocaml
  tm-grammar-c
  tm-grammar-cpp
  tm-grammar-cram
  tm-grammar-css
  tm-grammar-diff
  tm-grammar-dockerfile
  tm-grammar-dune
  tm-grammar-go
  tm-grammar-graphql
  tm-grammar-html
  tm-grammar-java
  tm-grammar-javascript
  tm-grammar-json
  tm-grammar-jsonc
  tm-grammar-makefile
  tm-grammar-markdown
  tm-grammar-menhir
  tm-grammar-mlx
  tm-grammar-ocaml
  tm-grammar-ocamllex
  tm-grammar-opam
  tm-grammar-python
  tm-grammar-reason
  tm-grammar-ruby
  tm-grammar-rust
  tm-grammar-shellscript
  tm-grammar-sql
  tm-grammar-toml
  tm-grammar-tsx
  tm-grammar-typescript
  tm-grammar-yaml
 ))
